RootDBApp/frontend#4 - wip

--- a/src/translations/fr/report.json
+++ b/src/translations/fr/report.json
@@ -77,6 +77,10 @@
         "all_dataviews" : "Toutes les vues",
         "available_data_views" : "Vues disponibles",
         "by_chunk" : "Par morceau",
+        "chartjs_config": {
+            "background_color": "Couleur de fond",
+            "border_color": "Couleur de bordure"
+        },
         "chunk_size" : "Taille des morceaux",
         "dataview_options" : "Options de la vue",
         "description_display_type" : "Affichage de la description",
