RootDBApp/frontend#15 - Handle basic CUD.

--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -6,6 +6,7 @@
     "administrator" : "Administrateur",
     "and" : "et",
     "an_error_occured" : "Une erreur s'est produite.",
+    "assets" : "Assets",
     "at" : "à",
     "authorized_for" : "Autorisé pour",
     "authorized_groups" : "Groupes d'utilisateurs autorisés",
