--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -6,6 +6,7 @@
     "administrator" : "Administator",
     "and" : "and",
     "an_error_occured" : "An error occured",
+    "assets" : "Assets",
     "at" : "at",
     "authorized_for" : "Authorized for",
     "authorized_groups" : "Users groups authorized",
