--- a/src/translations/en/report.json
+++ b/src/translations/en/report.json
@@ -39,6 +39,14 @@
     "this_report_does_not_exists" : "This report does not exists.",
     "this_report_does_not_provide_any_parameter" : "This report does not provide any parameter.",
     "view" : "View",
+    "asset" : {
+        "asset_source" : "Asset source",
+        "create_to_upload" : "Create the asset in order to upload asset content.",
+        "name" : "Asset name",
+        "new_asset" : "New asset",
+        "storage_location" : "Storage location",
+        "storage_type" : "Storage type"
+    },
     "cache" : {
         "ttl_15_m" : "for 15 minutes",
         "ttl_1_h" : "for 1 hour",
