RootDBApp/frontend#15 - wip - basic asset upload.

--- a/src/translations/en/common.json
+++ b/src/translations/en/common.json
@@ -27,6 +27,7 @@
     "display" : "Display",
     "display_help_tab" : "Display Help tab",
     "display_home_tab" : "Display Home tab",
+    "download" : "Download",
     "errors" : "Errors",
     "fatal_error_occurred" : "Fatal error occurred",
     "favorites" : "Favorites",
@@ -49,6 +50,7 @@
     "overlay" : "Overlay",
     "parameters" : "Parameters",
     "parent_directory" : "Parent directory",
+    "please_wait" : "Please wait.",
     "proceed_question" : "Do you want to proceed ?",
     "project" : "Project",
     "remove_all" : "Remove all",
@@ -61,6 +63,7 @@
     "subtitle" : "Subtitle",
     "undefined" : "undefined",
     "updates" : "Updates",
+    "uploaded" : "Uploaded",
     "users" : "Users",
     "users_group" : "Users group",
     "users_groups" : "Users groups",
