--- a/src/translations/fr/common.json
+++ b/src/translations/fr/common.json
@@ -27,6 +27,7 @@
     "display" : "Affichage",
     "display_help_tab" : "Afficher l'onglet d'Aide",
     "display_home_tab" : "Afficher l'onglet Accueil",
+    "download" : "Télécharger",
     "errors" : "Erreurs",
     "fatal_error_occurred" : "Une erreur fatale est survenue",
     "favorites" : "Favoris",
@@ -51,6 +52,7 @@
     "overlay" : "Sur-impression",
     "parameters" : "Paramètres",
     "parent_directory" : "Répertoire parent",
+    "please_wait" : "Patientez svp.",
     "proceed_question" : "Voulez-vous continuer ?",
     "project" : "Projet",
     "remove_all" : "Tout supprimer",
@@ -68,6 +70,7 @@
     "users" : "Utilisateurs",
     "users_group" : "Groupe d'utilisateurs",
     "users_groups" : "Groupes d'utilisateurs",
+    "uploaded" : "Téléversé",
     "viewer" : "Utilisateur",
     "yes" : "Oui",
     "website" : "Site web",
